# gym_darwin_op3

./: .pre-commit-config.yaml  README.md  changelog.md  pyproject.toml  update_version.py
gym_env/: __init__.py
gym_env/envs/: __init__.py  callbacks.py  darwin_op3.py
mjcf/: op3.xml  scene.xml
scripts/: increment_version.py
src/darwin_op3/: __init__.py  test_environment.py  test_model.py
src/darwin_op3/env/: __init__.py  darwin_env.py
src/darwin_op3/model/: op3.xml
tests/: test_environment.py  test_model.py
