[project]
name = "darwin-op3"
version = "0.2.1"
description = "Darwin OP3 Gym MuJoCo Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "gymnasium>=1.0.0", "imageio>=2.37.0", "mujoco>=3.2.7", "stable-baselines3",]
[[project.authors]]
name = "Fabio Gianzanti"
email = "pardal@hotmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [ "stable-baselines3",]

[tool.uv.sources.stable-baselines3]
git = "https://github.com/DLR-RM/stable-baselines3"
