[project]
name = "gym-env"
version = "0.2.34"
description = "Darwin OP3 Gym MuJoCo Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "gymnasium>=1.1.1", "imageio>=2.37.0", "mujoco>=3.3.0", "stable-baselines3",]
[[project.authors]]
name = "Fabio Gianzanti"
email = "pardal@hotmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [ "stable-baselines3",]

[tool.uv.sources.stable-baselines3]
git = "https://github.com/DLR-RM/stable-baselines3"
